added changeds to backend

--- a/portfolio-api/package.json
+++ b/portfolio-api/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server": "nodeman server.js"
   },
   "author": "Utkarsh Gaur",
   "license": "ISC",
@@ -12,7 +13,7 @@
     "@sendgrid/mail": "^7.4.2",
     "body-parser": "^1.19.0",
     "cars": "^1.1.6",
-    "express": "^4.17.1",
-    "nodeman": "^1.1.2"
+    "cors": "^2.8.5",
+    "express": "^4.17.1"
   }
 }
